@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1629 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added support for XML schema type 'unsigned' to XML code generator.
+       Details: http://jira.codehaus.org/browse/CASTOR-1629
+       (Werner - 20061017)
+
 XML:   Resolved issue CASTOR-1600 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with incorrect model group naming (and numbering) scheme.
        Details: http://jira.codehaus.org/browse/CASTOR-1600
